[package]
name = "saabanto"
version = "0.1.0"
authors = ["cdepillabout@gmail.com"]
edition = "2018"
description = "Library for defining type-safe REST APIs"
license = "MIT"
repository = "https://github.com/cdepillabout/saabanto"
readme = "README.md"
keywords = ["json", "web-api"]
categories = ["web"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
